// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reset Password Authenticator Transformer Tests should add updated title element and submit button to UI Schema for reset PW step 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.reset.title.generic",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [
            Object {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": Object {
            "complexity": Object {
              "minLength": 1,
            },
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "passwordMatchesValidation",
        "options": Object {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      Object {
        "label": "password.reset",
        "options": Object {
          "step": "reset-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Reset Password Authenticator Transformer Tests should add updated title element and submit button to UI Schema for reset PW step with brandName provided 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.reset.title.specific",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": Array [
            Object {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": Object {
            "complexity": Object {
              "minLength": 1,
            },
          },
          "userInfo": Object {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "passwordMatchesValidation",
        "options": Object {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      Object {
        "label": "password.reset",
        "options": Object {
          "step": "reset-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Reset Password Authenticator Transformer Tests should add updated title element and submit button to UI Schema for reset PW step without password policy settings 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "credentials.passcode": Object {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "password.reset.title.generic",
        },
        "type": "Title",
      },
      Object {
        "noMargin": true,
        "options": Object {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      Object {
        "label": "Password",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "messages": Object {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "key": "passwordMatchesValidation",
        "options": Object {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      Object {
        "label": "password.reset",
        "options": Object {
          "step": "reset-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
